2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/plumbing.glade:
	  Rename and clean up as mentioned in #540.
	* po/nl.po:
	  update

2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  Fix up a string.
	* flumotion/component/effects/volume/volume.glade:
	* flumotion/component/producers/audiotest/audiotest.glade:
	* po/POTFILES.in:
	  Make more things translatable.
	* po/ca.po:
	* po/es.po:
	* po/fr.po:
	* po/nl.po:
	* po/no.po:
	* po/pt_BR.po:
	  Translate them.

2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	  So this is the new year.

2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py:
	  Don't use the word Plumbing, but Feeders.  Make the name
	  translatable.  Don't show the tab if there are no feeders
	  (consumers for example).
	* po/POTFILES.in:
	  Mark for translation.

2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/effects/volume/volume.glade:
	  Fix a small UI glitch.

2007-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/admin_gtk.py:
	  Respect the component protocol, return the .setup deferred
	* flumotion/admin/gtk/client.py:
	  Clean up F0.2 TODO's.
	  Add _instanceSetup method so that we properly handle errors in
	  components in both cases.

2007-01-11  Andy Wingo  <wingo@pobox.com>

	* flumotion/job/job.py (JobMedium.shutdownHandler): Wait for both
	calls to complete (either with success or failure), as they are
	independent, i.e. a failure on one does not mean the other will
	fail or fail to complete. Fixes components showing up as lost
	occasionally when a worker is control-C'd.

	* flumotion/manager/manager.py
	(Vishnu._getComponentState.verifyExistingComponentState): If a